deployment/aws/CFN-templates/SG-Stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Security groups for the Nutrition application.

Resources:
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ALB
      VpcId: !ImportValue NutritionVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  ECSFargateSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Security group for ECS task
        VpcId: !ImportValue NutritionVpc
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 8000
            ToPort: 8000
            SourceSecurityGroupId: !Ref ALBSecurityGroup

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for RDS instance
      VpcId: !ImportValue NutritionVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref ECSFargateSecurityGroup
      Tags:
        - Key: Name
          Value: nutrition-rds-sg

Outputs:
  ALBSecurityGroupId:
    Description: Security group ID for ALB
    Value: !Ref ALBSecurityGroup
    Export:
      Name: NutritionALBSecurityGroup

  ECSFargateSecurityGroupId:
    Description: Security group ID for ECS Fargate tasks
    Value: !Ref ECSFargateSecurityGroup
    Export:
      Name: NutritionECSFargateSecurityGroup

  RDSSecurityGroupId:
    Description: Security group ID for RDS instance
    Value: !Ref RDSSecurityGroup
    Export:
      Name: NutritionRDSSecurityGroup
